@@ -7,33 +7,19 @@ class EventApp
   attr_accessor :window, :popup, :gtk_entry, :stage, :hand, :clutter_entry
 end
 
-# Set the clutter colors form the current gtk theme
-def create_colors (app, stage, text)
-  style = app.window.style
-
-  # Set the stage color to base[NORMAL]
-  color = style.bg(Gtk::STATE_NORMAL)
-  stage.red   =  (color.red/65535.0) * 255;
-  stage.green =  (color.green/65535.0) * 255;
-  stage.blue  =  (color.blue/65535.0) * 255;
-  
-  # Now the text color
-  color = style.text(Gtk::STATE_NORMAL)
-  text.red   =  (color.red/65535.0) * 255;
-  text.green =  (color.green/65535.0) * 255;
-  text.blue  =  (color.blue/65535.0) * 255;
-end
-
 def on_x_changed(button, app)
-  app.hand.rotate_x(button.value, app.hand.height, 0)
+  app.hand.set_rotation(Clutter::X_AXIS, button.value,
+                        0, app.hand.height / 2, 0)
 end
 
 def on_y_changed(button, app)
-  app.hand.rotate_y(button.value, app.hand.width / 2, 0)
+  app.hand.set_rotation(Clutter::Y_AXIS, button.value,
+                        app.hand.width / 2, 0, 0)
 end
 
 def on_z_changed(button, app)
-  app.hand.rotate_z(button.value, app.hand.width / 2, app.hand.height / 2)
+  app.hand.set_rotation(Clutter::Z_AXIS, button.value,
+                        app.hand.width / 2, app.hand.height / 2, 0)
 end
 
 def on_opacity_changed(button, app)
@@ -41,11 +27,8 @@ def on_opacity_changed(button, app)
 end
 
 app = EventApp.new  
-stage_color = Clutter::Color.new(255, 255, 255, 255)
-text_color = Clutter::Color.new(0, 0, 0, 255)
 
-Clutter::init
-Gtk::init
+Clutter::Gtk.init
 
 # Create the inital gtk window and widgets, just like normal
 widget = Gtk::Window.new(Gtk::Window::TOPLEVEL)
@@ -72,22 +55,19 @@ hbox = Gtk::HBox.new(false, 12)
 vbox.pack_start(hbox, true, true, 0)
 
 # Set up clutter & create our stage
-create_colors(app, stage_color, text_color)
-widget = Clutter::Gtk.new
+widget = Clutter::GtkEmbed.new
 hbox.pack_start(widget, true, true, 0)
 app.stage = widget.stage
-app.stage.set_color(stage_color)
 
 # Create the main texture that the spin buttons manipulate
-pixbuf = Gdk::Pixbuf.new("redhand.png");
-actor = Clutter::Texture.new(pixbuf)
+actor = Clutter::Texture.new("redhand.png")
 app.hand = actor
 app.stage.add(actor)
 actor.set_position(app.stage.width / 2 - actor.width / 2,
                    app.stage.height / 2 - actor.height / 2)
 
 # Setup the clutter entry
-actor = Clutter::Entry.new("Sans 10", "", text_color)
+actor = Clutter::Entry.new("Sans 10", "")
 app.clutter_entry = actor
 app.stage.add(actor)
 actor.set_position(0, 0)
@@ -137,6 +117,11 @@ box.pack_start(button, true, true, 0)
 button.signal_connect("value-changed") do |button|
   on_opacity_changed(button, app)
 end
+
+# Set the colors from the GTK theme
+app.stage.color = Clutter::Gtk.get_bg_color(app.window, Gtk::STATE_NORMAL)
+app.clutter_entry.color \
+= Clutter::Gtk.get_text_color(app.window, Gtk::STATE_NORMAL)
 
 app.stage.show_all
 app.window.show_all
